# envkit

./: .gitignore  README.md  pyproject.toml
src/envkit/: _env.py  _fields.py  _utils.py
tests/: test_fields.py
