[project]
name = "envkit"
version = "0.3.2"
description = "A lightweight package for parsing environment variables."
authors = [{ name = "Theo Guerin", email = "contact@theo-guerin.dev" }]
readme = "README.md"

requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "basedpyright>=1.29.5",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "strict"
